<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.indrajha.sasquiz.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="94sp"
        android:text="@string/app_name"
        android:textColor="#689F38"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_below="@id/textView"
        android:layout_marginTop="100sp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#df040b"
        android:textColorHint="#546E7A" />

    <EditText
        android:id="@+id/actNo"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_below="@id/editName"
        android:layout_marginTop="40sp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_acn"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#df040b"
        android:textColorHint="#546E7A" />


    <TextView
        android:id="@+id/textView9"
        android:layout_width="106dp"
        android:layout_height="35dp"
        android:layout_below="@id/actNo"
        android:layout_centerInParent="true"
        android:layout_marginTop="24dp"
        android:text="" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="200dp"
        android:layout_height="52dp"
        android:layout_above="@+id/buttonQuit"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-2dp"
        android:layout_marginLeft="-2dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/round_butt"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <Button
        android:id="@+id/buttonQuit"
        android:layout_width="200dp"
        android:layout_height="52dp"
        android:layout_above="@+id/buttonAbout"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-1dp"
        android:layout_marginLeft="-1dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/round_butt2"
        android:text="@string/quit"
        android:textColor="#BF360C"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonAbout"
        android:layout_width="200dp"
        android:layout_height="52dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/round_butt3"
        android:text="@string/about"
        android:textColor="#4A148C"
        android:textSize="16sp" />

</RelativeLayout>
