<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.indrajha.sasquiz.DeveloperActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:gravity="center_horizontal"
        android:minHeight="48dp"
        android:text="@string/developed_by"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#78909C"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/devBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/initialImageIndra"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@drawable/indra_dp"
            android:contentDescription="@string/indra" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/indra"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editTextTextEmailAddress2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="textEmailAddress"
            android:isScrollContainer="false"
            android:text="@string/email"
            android:autofillHints="" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:layout_below="@id/devBox"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:text="Social "
            android:textSize="24sp"/>

        <ImageView
            android:id="@+id/imgInsta"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="4sp"
            android:clickable="true"
            android:contentDescription="@string/insta"
            android:onClick="openInsta"
            app:srcCompat="@drawable/instagram"
            android:layout_marginLeft="5dp"
            android:focusable="true" />

        <ImageView
            android:id="@+id/imgYt"
            android:layout_width="48dp"
            android:layout_height="54dp"
            android:layout_marginStart="5sp"
            android:layout_marginLeft="5sp"
            android:clickable="true"
            android:onClick="openYt"
            app:srcCompat="@drawable/youtube"
            android:focusable="true" />

        <ImageView
            android:id="@+id/imgTg"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="5sp"
            android:layout_marginTop="2sp"
            android:clickable="true"
            android:onClick="openTg"
            app:srcCompat="@drawable/telegram"
            android:layout_marginLeft="5sp"
            android:focusable="true" />

        <ImageView
            android:id="@+id/imgRed"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="5sp"
            android:layout_marginLeft="5sp"
            android:clickable="true"
            android:onClick="openRed"
            app:srcCompat="@drawable/reddit"
            android:focusable="true" />

        <ImageView
            android:id="@+id/imgBl"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="5sp"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="3sp"
            android:clickable="true"
            android:onClick="openBl"
            app:srcCompat="@drawable/blogger"
            android:focusable="true" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="266dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="380dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="3dp"
            android:text="@string/office"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView7"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="17dp"
            android:text="@string/dept"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/textMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView8"
            android:layout_centerHorizontal="true"
            android:text="&quot;हर काम देश के नाम&quot;"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center_horizontal" />

        <ImageView
            android:id="@+id/dadLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="false"
            android:layout_alignTop="@+id/textView8"
            android:layout_alignParentBottom="false"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/dadlogo" />
    </RelativeLayout>

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_butt3"
        android:text="@string/back"
        android:textColor="#4E342E" />
</RelativeLayout>
